[metadata]
name = hent
version = 1.0.2
author = imSofi
author_email = 6748208-imsofi@users.noreply.gitlab.com
url = https://gitlab.com/imsofi/hent/
license = MIT
description = A neofetch alternative written in python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    psutil

[options.entry_points]
console_scripts =
    hent = hent:main
